--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
       <meta charset="UTF-8">
-      <link rel="icon" href="/favicon.ico">
+      <link rel="icon" href="/public/demo/images/toyo_tires.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Sakai Vue</title>
+      <title>Toyo Tires</title>
       <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet">
+      <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
 </head>
 
 <body>
