--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
       <meta charset="UTF-8">
-      <link rel="icon" href="/public/demo/images/toyo-favicon.png">
+      <link rel="icon" href="/public/demo/images/icon_toyo.jpg">
       <meta name="viewport" content="width=device-width, initial-scale=3.0">
       <title>Toyo Tires</title>
       <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet">
